# scrapl

./: .gitmodules  CITATION.cff  LICENSE  README.md  conda_env_cpu.yml  conda_env_gpu.yml  pyproject.toml  requirements_all_cpu.txt  requirements_all_gpu.txt  requirements_cpu.txt  requirements_gpu.txt
configs/train/texture/: train_clap.yml  train_mss_meso.yml  train_panns_wglm.yml  train_ploss.yml  train_scrapl_adam.yml  train_scrapl_saga_pwa__adaptive_n_batches_10_n_iter_20_param_agg_none.yml
docs/: index.html
experiments/: cli.py  lightning.py
experiments/configs/eval_808/: jtfs.yml  scrapl_saga_pwa.yml  spectral_2dcnn_14p.yml
experiments/configs/losses/: clap.yml  jtfs.yml  mss_revisited.yml  panns_wglm.yml  scat_1d.yml  scrapl.yml  scrapl_pwa.yml  scrapl_saga.yml  scrapl_saga_pwa.yml
experiments/configs/models/: spectral_2dcnn.yml  spectral_2dcnn__no_do.yml
experiments/configs/synths/: chirp_texture_8khz.yml  chirplet_8khz_2_am_hi_fm_hi.yml  chirplet_8khz_2_am_hi_fm_med.yml  chirplet_8khz_2_am_lo_fm_lo.yml  chirplet_8khz_2_am_lo_fm_med.yml
experiments/configs/synths/unused/: chirplet_8khz_am_hi_fm_hi.yml  chirplet_8khz_am_hi_fm_lo.yml  chirplet_8khz_am_lo_fm_hi.yml  chirplet_8khz_am_lo_fm_lo.yml
experiments/configs/train/chirplet/: train_scrapl_saga_pwa__2_am_hi_fm_hi.yml  train_scrapl_saga_pwa__2_am_hi_fm_hi__probs_n_batches_1.yml  train_scrapl_saga_pwa__2_am_hi_fm_med.yml  train_scrapl_saga_pwa__2_am_hi_fm_med__probs_n_batches_1.yml  train_scrapl_saga_pwa__2_am_lo_fm_lo.yml  train_scrapl_saga_pwa__2_am_lo_fm_lo__probs_n_batches_1.yml  train_scrapl_saga_pwa__2_am_lo_fm_med.yml  train_scrapl_saga_pwa__2_am_lo_fm_med__probs_n_batches_1.yml  train_scrapl_saga_pwa_warmup.yml
experiments/eval_808/: data.py  experiments.py  lightning.py  synths.py
experiments/scripts/: analyze_probs.py  benchmark.py  combine_probs.py  fix_tsv.py  forward_mode_experiments.py  loudness_norm_audio.py  plot_loss.py  plot_probs.py  plot_scatterplot.py  print_tsv.py  train.py
experiments/scripts/unused/: calc_grad_acc.py  calc_grad_metrics.py  gradients.py  visualize_grads.py
experiments/src/: callbacks.py  cli.py  data_modules.py  lightning.py  losses.py  plotting.py  synths.py  util.py
experiments/src/panns/: model_loader.py
scrapl/: README.md  __init__.py  scrapl_loss.py  util.py
scrapl/single_path_jtfs/: README.md  __init__.py  torch.py  version.py
scrapl/single_path_jtfs/core/: timefrequency_scattering.py
scrapl/single_path_jtfs/frontend/: base_frontend.py  entry.py  torch_frontend.py
scripts/: calc_p_vals.py  plot_loss.py  train.py
tests/: test_scrapl_loss.py
(+13 files in other folders)
