[project]
name = "scrapl-loss"
version = "0.1.0"
description = "SCRAPL: Scattering Transform with Random Paths for Machine Learning"
readme = "scrapl/README.md"
requires-python = ">=3.10"
authors = [
    {name = "Christopher Mitcheltree", email = "christhetree@gmail.com"},
    {name = "Vincent Lostanlen", email = "vincent.lostanlen@ls2n.fr"},
]
license = { text = "MIT" }
keywords = [
    "scattering transform",
    "wavelets",
    "stochastic optimization",
    "ddsp",
    "perceptual quality assessment",
    "machine learning",
    "pytorch",
    "jtfs",
]

dependencies = [
    "torch>=2.8.0,<3.0.0",
    "numpy>=0.14",
    "scipy>=1.2.1",
    "appdirs",
    "configparser",
    "packaging",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
]

[project.urls]
Website = "https://christhetree.github.io/scrapl/"
Repository = "https://github.com/christhetree/scrapl/"
"ICLR 2026 Paper" = "https://openreview.net/forum?id=RuYwbd5xYa"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

# Required since the scrapl package is not located in a src subdirectory.
[tool.uv.build-backend]
module-name = "scrapl"
module-root = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"  # verbose output
